--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Notre-Dame de Paris"
+title = "Herning Faldskærmsklub"
 baseURL = "https://gohugo-theme-ananke.pages.dev"
 languageCode = "da-DK"
 theme = ["ananke"]
@@ -12,12 +12,12 @@ enableRobotsTXT = true
 
 [languages]
   [languages.da]
-    title = "Ananke"
+    title = "HFK"
     weight = 1
     contentDir = "content/da"
     # languageDirection = 'rtl' for Right-To-Left languages
   [languages.en]
-    title = "Ananke Fr"
+    title = "HFK"
     weight = 2
     contentDir = "content/en"
 
@@ -33,9 +33,9 @@ enableRobotsTXT = true
   site_logo = ""
   description = "Welcome to The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  recent_posts_number = 3
+  background_color_class = "bg-navy"
+  recent_posts_number = 10
 
 [[params.ananke_socials]]
-name = "twitter"
-url = "https://twitter.com/GoHugoIO"
+name = "facebook"
+url = "https://www.facebook.com/groups/127139271230545"
