--- a/config.toml
+++ b/config.toml
@@ -29,9 +29,9 @@ enableRobotsTXT = true
 [params]
   text_color = ""
   author = "IT Advice"
-  favicon = ""
-  site_logo = ""
-  description = "Welcome to The last theme you'll ever need. Maybe."
+  favicon = "./images/parachute.png"
+  site_logo = "./images/parachute.png"
+  description = "Hjemmesiden for Herning Faldskærmsklub"
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-navy"
   recent_posts_number = 10
