--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Herning Faldskærmsklub"
-baseURL = "https://herningfk.github.io"
+baseURL = "https://herningfk.github.io/"
 languageCode = "da-DK"
 theme = ["ananke"]
 resourceDir = "../resources"
@@ -28,9 +28,10 @@ enableRobotsTXT = true
 
 [params]
   text_color = ""
+  date_format = "2. January 2006"
   author = "IT Advice"
-  favicon = "./images/parachute.png"
-  site_logo = "./images/parachute.png"
+  favicon = "/images/parachute.png"
+  site_logo = "/images/parachute.png"
   description = "Hjemmesiden for Herning Faldskærmsklub"
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-navy"
