--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ resourceDir = "../resources"
 
 DefaultContentLanguage = "da"
 SectionPagesMenu = "main"
-Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
+Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
 
@@ -16,10 +16,6 @@ enableRobotsTXT = true
     weight = 1
     contentDir = "content/da"
     # languageDirection = 'rtl' for Right-To-Left languages
-  [languages.en]
-    title = "HFK"
-    weight = 2
-    contentDir = "content/en"
 
 [sitemap]
   changefreq = "monthly"
@@ -30,7 +26,7 @@ enableRobotsTXT = true
   text_color = ""
   date_format = "2. January 2006"
   author = "IT Advice"
-  site_logo = "/images/parachute.png"
+  site_logo = "/images/logo.png"
   description = "Hjemmesiden for Herning Faldskærmsklub"
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-navy"
