--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ baseURL = "https://herningfk.github.io/"
 languageCode = "da-DK"
 theme = ["ananke"]
 resourceDir = "../resources"
+publishDir = "./docs"
 
 DefaultContentLanguage = "da"
 SectionPagesMenu = "main"
