--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ enableRobotsTXT = true
   site_logo = "/images/logo.png"
   description = "Hjemmesiden for Herning Faldskærmsklub"
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-navy"
+  background_color_class = "bg-green"
   recent_posts_number = 10
 
 [[params.ananke_socials]]
