--- a/config.toml
+++ b/config.toml
@@ -1,39 +1,3 @@
 title = "Herning Faldskærmsklub"
-baseURL = "https://herningfk.github.io/"
-languageCode = "da-DK"
-theme = ["ananke"]
-resourceDir = "../resources"
-publishDir = "./docs"
 
-DefaultContentLanguage = "da"
-SectionPagesMenu = "main"
-Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
-googleAnalytics = ""
-enableRobotsTXT = true
-
-[languages]
-  [languages.da]
-    title = "HFK"
-    weight = 1
-    contentDir = "content/da"
-    # languageDirection = 'rtl' for Right-To-Left languages
-
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
-
-[params]
-  text_color = ""
-  date_format = "2. January 2006"
-  author = "IT Advice"
-  site_logo = "/images/logo.png"
-  description = "Hjemmesiden for Herning Faldskærmsklub"
-  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-green"
-  recent_posts_number = 10
-
-[[params.ananke_socials]]
-name = "facebook"
-url = "https://www.facebook.com/groups/127139271230545"
-
+theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
