feat(site): add gf2024

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 title = "Herning Faldskærmsklub"
-baseURL = "https://herningfk.github.io/"
+baseURL = "https://herningfk.dk/"
 languageCode = "da-DK"
 
 DefaultContentLanguage = "da"
