--- a/hugo.toml
+++ b/hugo.toml
@@ -25,7 +25,7 @@ publishDir = "./docs"
 [params]
   text_color = ""
   date_format = "2. January 2006"
-  author = "IT Advice"
+  author = "Thomas Gilbert"
   # site_logo = "/images/logo.png"
   description = "Hjemmesiden for Herning Faldskærmsklub"
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
